# battery-management-system

./: .gitignore  CMakeLists.txt  bms_database.db  platformio.ini
BMS-Flask/: app.py
BMS-Flask/templates/: history.html  index.html
include/: Config.h  DataTypes.h  Secrets.h.example
main/: CMakeLists.txt  main.cpp
main/Core/: CoulombCounter.cpp  CoulombCounter.h  Protection.cpp  Protection.h  SoCEstimator.cpp  SoCEstimator.h  StateManager.cpp  StateManager.h
main/HAL/: Display.cpp  Display.h  Relays.cpp  Relays.h  UartLink.cpp  UartLink.h
main/Services/: NetManager.cpp  NetManager.h
main/Simulator/: BMS_test.py
main/include/: Config.h  DataTypes.h
src/: main.cpp
src/Core/: CoulombCounter.cpp  CoulombCounter.h  Protection.cpp  Protection.h  StateManager.cpp  StateManager.h
src/HAL/: Display.cpp  Display.h  Relays.cpp  Relays.h  UartLink.cpp  UartLink.h
src/Services/: NetManager.cpp  NetManager.h  StorageManager.cpp  StorageManager.h
test/: bms_simulator.py  test_packet_sender.py
test/test_coulomb_counter/: test_main.cpp
test/test_parsing/: test_main.cpp
test/test_protection/: test_main.cpp
test/test_relay/: test_main.cpp
test/test_state_manager/: test_main.cpp
test/test_storage/: test_main.cpp
